--- a/css/contactus.css
+++ b/css/contactus.css
@@ -57,22 +57,28 @@
     margin: -40px auto;
 }
 
-.icon-container {
-    display: flex; /* Arrange icons horizontally */
-    margin-left: 1275px ; /* Add some margin for spacing */
+.nav{
+    display: flex;
+    justify-content: center;align-items: center;
+  }
+  
+  .icon-container {
+    display: flex;
+    justify-content: flex-end;
+    flex-grow:1 ;
+    gap: 20px;
     }
     
-.icon-container a {
-     margin-right: 30px; /* Add some space between icons */
+  .icon-container a {
+  
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  
     text-decoration: none; /* Remove underline from links */
     color: #000; /* Set text color */
-}
-    
-.icon-container a span {
-    display: block; /* Make text display below the icon */
-    text-align: right;
-     margin-left: -7px; /* Center text alignment */
-}
+  }
 
 .logo{
     margin-right: -20px;
