--- a/css/userProfile.css
+++ b/css/userProfile.css
@@ -67,23 +67,28 @@
     margin: -40px auto;
 }
 
-.icon-container {
-    display: flex; /* Arrange icons horizontally */
-    margin-left: 1275px ; /* Add some margin for spacing */
-    }
-    
-.icon-container a {
-     margin-right: 30px; /* Add some space between icons */
-    text-decoration: none; /* Remove underline from links */
-    color: #000; /* Set text color */
-}
-    
-.icon-container a span {
-    display: block; /* Make text display below the icon */
-    text-align: right;
-     margin-left: -7px; /* Center text alignment */
+.nav{
+  display: flex;
+  justify-content: center;align-items: center;
 }
 
+.icon-container {
+  display: flex;
+  justify-content: flex-end;
+  flex-grow:1 ;
+  gap: 20px;
+  }
+  
+.icon-container a {
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  text-decoration: none; /* Remove underline from links */
+  color: #000; /* Set text color */
+}
 body {
     margin: 0; /* Remove default body margin */
 }
@@ -94,21 +99,31 @@ body {
 
 
 
+/* form wrapper for user details and password box */
+.form-wrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 200px;
+  }
+
+
 /* user profile page */
 .user-details-box {
     border: 1px solid #ccc;
     padding: 20px;
     width: 300px;
-    margin: 20px auto;
+
     border-radius: 5px;
     background-color: #f9f9f9;
   }
+  
   .user-details-box label {
     display: block;
     margin-bottom: 10px;
   }
   .user-details-box input[type="text"],
-  .user-details-box input[type="password"] {
+  .user-details-box input[type="email"] {
     width: 100%;
     padding: 8px;
     margin-bottom: 15px;
@@ -143,6 +158,72 @@ body {
     text-align: center;
     margin-bottom: 20px;
   }
+
+
+
+  /* user Password Box */
+.user-password-box {
+  border: 1px #ccc;
+  padding: 20px;
+  width: 300px;
+
+  border-radius: 5px;
+  background-color: #f9f9f9;
+}
+.user-password-box label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+
+.user-password-box input[type="password"] {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  box-sizing: border-box;
+}
+.user-password-box input[type="submit"] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+}
+.user-details-box input[type="submit"]:hover {
+  background-color: #45a049;
+}
+.user-details-box input[type="reset"] {
+  background-color: #f44336;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+}
+.user-password-box input[type="reset"]:hover {
+  background-color: #da190b;
+}
+
+.userHeading {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
