--- a/css/admin/admin-listFlight.css
+++ b/css/admin/admin-listFlight.css
@@ -14,6 +14,14 @@
     margin-right: -70px ;
 }
 
+input[type="number"] {
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    width: 100%;
+    box-sizing: border-box; /* Ensure padding and border are included in width */
+}
+
 .footer {
     width: auto; /* Span full width */
     border: 2px solid #000;
