--- a/css/admin/admin-addStaff.css
+++ b/css/admin/admin-addStaff.css
@@ -146,9 +146,8 @@ label {
 }
 
 input[type="text"],
-
 input[type="password"],
-
+input[type="email"],
 select {
     width: 100%;
     padding: 8px;
