--- a/css/userProfile.css
+++ b/css/userProfile.css
@@ -123,7 +123,7 @@ body {
     margin-bottom: 10px;
   }
   .user-details-box input[type="text"],
-  .user-details-box input[type="email"] {
+  .user-details-box input[type="email"]{
     width: 100%;
     padding: 8px;
     margin-bottom: 15px;
@@ -142,16 +142,13 @@ body {
   .user-details-box input[type="submit"]:hover {
     background-color: #45a049;
   }
-  .user-details-box input[type="reset"] {
+  .user-details-box button {
     background-color: #f44336;
     color: white;
     padding: 10px 20px;
     border: none;
     border-radius: 3px;
     cursor: pointer;
-  }
-  .user-details-box input[type="reset"]:hover {
-    background-color: #da190b;
   }
 
 .userHeading {
@@ -192,40 +189,6 @@ body {
   border-radius: 3px;
   cursor: pointer;
 }
-.user-details-box input[type="submit"]:hover {
-  background-color: #45a049;
-}
-.user-details-box input[type="reset"] {
-  background-color: #f44336;
-  color: white;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 3px;
-  cursor: pointer;
-}
-.user-password-box input[type="reset"]:hover {
-  background-color: #da190b;
-}
-
-.userHeading {
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -263,3 +226,23 @@ body {
     background-color: #ddd;
   }
   
+
+  #btn-wrap{
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #delete-btn{
+    background-color: #f44336;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+  }
+
+  #delete-btn:hover{
+    background-color: #ff1100;
+  }
